# Calculator

./: CMakeLists.txt  Calculator.sln
Calculator/: CMakeLists.txt  Calculator.cpp  Calculator.h  Calculator.rc  Calculator.ui  Calculator.vcxproj  Calculator.vcxproj.filters  MathExpression.cpp  MathExpression.h  main.cpp
UnitTests/: CMakeLists.txt  MExpUnitTests.cpp  UnitTests.vcxproj  UnitTests.vcxproj.filters
cmake/: deploy_util.cmake  vcpkg_util.cmake
